# semester-project-pda23

./: README.md  pyproject.toml
src/: abgabe_mareike_van_elsacker.ipynb  helpers.py
