[tool.poetry]
name = "us-census-analysis"
version = "1.0.0"
description = "semster project analysing 1994 US census data to predict social class of citizens"
authors = ["Mareike Klara van Elsacker"]
readme = "README.md"
repository = "https://github.com/MareikeVE/semester-project-pda23"
packages = [{include = "pda_23"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.3"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
